# charinfo

./: .gitignore  README.md  publish.ps1  setup.cfg
charinfo/: __init__.py  __main__.py  core.py
