[metadata]
name = charinfo
version = attr: charinfo.__version__
description=A command line tool to view detailed information about a character
long_description = file: README.md
long_description_content_type =text/markdown
author = Wasi Master
author_email = arianmollik323@gmail.com
# url = https://wasi-master.github.io/charinfo/
project_urls=
    Bug Tracker = https://github.com/wasi-master/charinfo/issues
    Source = https://github.com/wasi-master/charinfo
    # Documentation = https://wasi-master.github.io/charinfo
    Say Thanks = https://saythanks.io/to/wasi-master
keywords =
    charinfo
    cli
    char
    character
    characters
    character information
    character-information
    charinfo-cli
    charinfo cli
    character-info
    character info
    character-info-cli
    character info cli
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop
    Natural Language :: English
    Topic :: Terminals


[options]
zip_safe = False
packages =
    charinfo
install_requires =
    rich


[options.entry_points]
console_scripts =
    charinfo=charinfo.__main__:run
pipx.run =
    charinfo=charinfo.__main__:run
